adding more content

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -84,7 +84,7 @@ header.main nav.main > ul:after {
 header.main nav.main > ul > li {
   display: block;
   float: left;
-  width: 14.285714285714286%;
+  width: 20%;
   margin: 0px;
   padding: 0px;
   position: relative;
