--- a/static/css/style.less
+++ b/static/css/style.less
@@ -264,6 +264,65 @@ footer.main {
 }
 
 /*
+ * Slidesshow
+ * ----------
+ */
+
+.flexslider {
+    border: none;
+    box-shadow: none;
+    -webkit-box-shadow: none;
+    -moz-box-shadow: none;
+    -o-box-shadow: none;
+
+    ul.slides {
+        blockquote {
+            margin: 0px;
+        }
+
+        img {
+            width: auto;
+            float: left;
+            margin-right: 20px;
+        }
+    }
+}
+
+/* Direction Nav */
+.flex-direction-nav a {
+    width: 32px;
+    height: 54px;
+    margin: -20px 0 0;
+ }
+.flex-direction-nav {
+    .flex-next {
+        background: url(../images/slides/next.png);
+        right: 270px;
+
+        &:hover {
+            background: url(../images/slides/next-hover.png);
+        }
+    }
+
+    .flex-prev {
+        background: url(../images/slides/prev.png);
+        left: -36px;
+
+        &:hover {
+            background: url(../images/slides/prev-hover.png);
+        }
+    }
+}
+.flexslider:hover .flex-next {
+    opacity: 1;
+    right: 311px;
+}
+.flexslider:hover .flex-prev {
+    opacity: 1;
+    left: 5px;
+}
+
+/*
  * Pages
  * -----
  */
