--- a/templates/base.html
+++ b/templates/base.html
@@ -8,11 +8,13 @@
     <link rel="canonical" href="{{ url_for('page', path=remove_l10n_prefix(page.path)) }}" />
     {% endif %}
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" type="image/x-icon" />
+    <link href="{{ url_for('static', filename='css/flexslider.css') }}" rel="stylesheet" type="text/css" />
     <link href="{{ url_for('static', filename='css/style.css') }}" rel="stylesheet" type="text/css" />
     <!--[if lt IE 9]> {# Le HTML5 shim, for IE6-8 support of HTML5 elements #}
       <script src="{{ url_for('static', filename='lib/html5.js') }}"></script>
     <![endif]-->
     <script src="{{ url_for('static', filename='lib/jquery.js') }}"></script>
+    <script src="{{ url_for('static', filename='lib/jquery.flexslider-min.js') }}"></script>
     <title>IT3S - {{ page.title or gettext('Instituto de Fomento à Tecnologia do Terceiro Setor') }}</title>
 
   </head>
