--- a/static/css/style.less
+++ b/static/css/style.less
@@ -315,10 +315,14 @@ footer.main {
 }
 .flexslider:hover .flex-next {
     opacity: 1;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: autolpha(opacity=100);
     right: 311px;
 }
 .flexslider:hover .flex-prev {
     opacity: 1;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+    filter: autolpha(opacity=100);
     left: 5px;
 }
 
@@ -412,6 +416,8 @@ section.main.content {
                 > li.clickable {
                     > img {
                         opacity: 0.5;
+                        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+                        filter: autolpha(opacity=50);
                         position: relative;
                     }
 
@@ -421,6 +427,8 @@ section.main.content {
 
                         > img {
                             opacity: 1;
+                            -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+                            ter: autolpha(opacity=100);
                         }
                     }
                 }
@@ -468,6 +476,8 @@ section.main.content {
                 > li {
                     > img {
                         opacity: 0.5;
+                        -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
+                        filter: autolpha(opacity=50);
                         position: relative;
                         left: -3px;
                     }
@@ -478,6 +488,8 @@ section.main.content {
 
                         > img {
                             opacity: 1;
+                            -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
+                            filter: autolpha(opacity=100);
                         }
                     }
 
