--- a/static/css/style.less
+++ b/static/css/style.less
@@ -637,12 +637,28 @@ section.main.content {
      */
      &#colabore-doacoes {
          #conta {
-            width: 45%;
+            width: 40%;
             float: left;
+            border: solid 3px #8296a2;
+            border-radius: 10px;
+            padding: 0 10px 10px;
          }
-         #paypal,
+         #paypal {
+            padding: 0 20px;
+            width: 30%;
+            float: left;
+
+            img:first-child {
+                float: left;
+                margin: 35% 20px 0 0;
+            }
+
+            form {
+                margin: 35% 20px 0 0;
+            }
+         }
          #equipamentos {
-            width: 27%;
+            width: 30%;
             float: left;
          }
          #conta td {
