--- a/static/css/style.less
+++ b/static/css/style.less
@@ -228,7 +228,7 @@ footer.main {
 
     .supporters {
         display: inline-block;
-        width: 500px;
+        width: 420px;
 
         a {
             text-decoration: none;
@@ -260,6 +260,12 @@ footer.main {
                 margin-left: 150px;
             }
         }
+    }
+
+    .social-media {
+        display: inline-block;
+        width: 130px;
+        padding: 50px 0 0 10px;
     }
 }
 
