--- a/templates/footer.html
+++ b/templates/footer.html
@@ -19,5 +19,11 @@
       </li>
     </ul>
   </div>
-  <div class="social-media"></div>
+  <div class="social-media">
+    <div class="fb-like" data-href="https://www.facebook.com/IT3S.org" data-send="false" data-layout="button_count" data-width="130" data-show-faces="false"></div>
+    <br />
+    <br />
+    <a href="https://twitter.com/it3s" class="twitter-follow-button" data-show-count="false" data-lang="pt" data-size="large">Seguir @it3s</a>
+    <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+  </div>
 </footer>
