--- a/static/css/style.css
+++ b/static/css/style.css
@@ -54,7 +54,7 @@ header.main .logo a {
   height: 130px;
   color: transparent;
   background: url(../images/logo.png) no-repeat;
-  text-ident: -1000px;
+  text-indent: -1000px;
 }
 header.main .tagline {
   display: inline-block;
@@ -266,13 +266,13 @@ footer.main .social-media {
 .flexslider:hover .flex-next {
   opacity: 1;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-  filter: autolpha(opacity=100);
+  filter: alpha(opacity=100);
   right: 311px;
 }
 .flexslider:hover .flex-prev {
   opacity: 1;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-  filter: autolpha(opacity=100);
+  filter: alpha(opacity=100);
   left: 5px;
 }
 /*
@@ -413,7 +413,7 @@ section.main.content > ul.tablist > li > p > img {
 section.main.content > ul.tablist > li.clickable > img {
   opacity: 0.5;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-  filter: autolpha(opacity=50);
+  filter: alpha(opacity=50);
   position: relative;
 }
 section.main.content > ul.tablist > li.clickable.active,
@@ -424,7 +424,7 @@ section.main.content > ul.tablist > li.clickable.active > img,
 section.main.content > ul.tablist > li.clickable:hover > img {
   opacity: 1;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-  ter: autolpha(opacity=100);
+  ter: alpha(opacity=100);
 }
 section.main.content ul.tablist-content > li > blockquote {
   font-size: 0.9em;
@@ -442,7 +442,7 @@ section.main.content#principios > ul > li {
 section.main.content#equipe > ul.tablist > li > img {
   opacity: 0.5;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-  filter: autolpha(opacity=50);
+  filter: alpha(opacity=50);
   position: relative;
   left: -3px;
 }
@@ -454,7 +454,7 @@ section.main.content#equipe > ul.tablist > li.active > img,
 section.main.content#equipe > ul.tablist > li:hover > img {
   opacity: 1;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-  filter: autolpha(opacity=100);
+  filter: alpha(opacity=100);
 }
 section.main.content#equipe > ul.tablist > li:last-child > img {
   left: -10px;
