--- a/static/css/style.less
+++ b/static/css/style.less
@@ -62,7 +62,7 @@ header.main {
             height: 130px;
             color: transparent;
             background: url(../images/logo.png) no-repeat;
-            text-ident: -1000px;
+            text-indent: -1000px;
         }
     }
 
@@ -322,13 +322,13 @@ footer.main {
 .flexslider:hover .flex-next {
     opacity: 1;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-    filter: autolpha(opacity=100);
+    filter: alpha(opacity=100);
     right: 311px;
 }
 .flexslider:hover .flex-prev {
     opacity: 1;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-    filter: autolpha(opacity=100);
+    filter: alpha(opacity=100);
     left: 5px;
 }
 
@@ -423,7 +423,7 @@ section.main.content {
                     > img {
                         opacity: 0.5;
                         -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-                        filter: autolpha(opacity=50);
+                        filter: alpha(opacity=50);
                         position: relative;
                     }
 
@@ -434,7 +434,7 @@ section.main.content {
                         > img {
                             opacity: 1;
                             -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-                            ter: autolpha(opacity=100);
+                            ter: alpha(opacity=100);
                         }
                     }
                 }
@@ -483,7 +483,7 @@ section.main.content {
                     > img {
                         opacity: 0.5;
                         -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=50)";
-                        filter: autolpha(opacity=50);
+                        filter: alpha(opacity=50);
                         position: relative;
                         left: -3px;
                     }
@@ -495,7 +495,7 @@ section.main.content {
                         > img {
                             opacity: 1;
                             -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=100)";
-                            filter: autolpha(opacity=100);
+                            filter: alpha(opacity=100);
                         }
                     }
 
