--- a/static/css/style.css
+++ b/static/css/style.css
@@ -485,6 +485,13 @@ section.main.content#metodologia-cenario ul.tablist-content > li > blockquote {
   -moz-column-count: 1;
   -webkit-column-count: 1;
 }
+section.main.content#metodologia-cenario ul.tablist-content > li > blockquote > ul:first-child {
+  display: inline-block;
+  background: #ededed;
+  list-style: none;
+  padding: 10px;
+  border-radius: 5px;
+}
 section.main.content#metodologia-cenario ul.tablist-content > li > blockquote h2 {
   font-size: 1.4em;
   margin-top: 30px;
