--- a/static/css/style.less
+++ b/static/css/style.less
@@ -572,6 +572,14 @@ section.main.content {
                     -moz-column-count: 1;
                     -webkit-column-count: 1;
 
+                    > ul:first-child {
+                        display: inline-block;
+                        background: #ededed;
+                        list-style: none;
+                        padding: 10px;
+                        border-radius: 5px;
+                    }
+
                     h2 {
                         font-size: 1.4em;
                         margin-top: 30px;
